# Uplayer

./: .gitignore  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tauri-docs.md
.github/workflows/: build-windows.yml  build.yml
app/: app.vue
app/assets/css/: main.css
app/components/: AudioWaveVisualizer.vue  CoverDisplay.vue  PlayerControls.vue  PlaylistDrawer.vue  SettingsContent.vue  SettingsToggle.vue  WindowTitlebar.vue
app/composables/: useAudioAnalysis.ts  useAudioVisualizer.ts  useCurvedScrollbar.ts  useMediaSession.ts  useMusicLibrary.ts  usePlayerSettings.ts  useSongStorage.ts  useTauriFS.ts  useUrlHelpers.ts  useWebAudioPlayer.ts  useWindowControls.ts
app/pages/: index.vue
app/plugins/: buffer.client.ts
public/animations/: add.json  edit.json  open.json  trash.json
src-tauri/: Cargo.toml  tauri.conf.json  uplayer.desktop.template
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
